# voice_to_abb

./: .gitignore  README.md  benchmark_llama_cpp.json  benchmark_resultados.json  setup_env.sh
src/robot_voice_commander/: package.xml  setup.cfg  setup.py
src/robot_voice_commander/config/: settings.yaml
src/robot_voice_commander/robot_voice_commander/: benchmark.py  benchmark_cpp.py  moveit_executor_node.py  pipeline.py  voice_commander_node.py
src/robot_voice_commander/robot_voice_commander/modules/: hardware.py
src/robot_voice_commander/robot_voice_commander/modules/audio/: capture.py
src/robot_voice_commander/robot_voice_commander/modules/llm/: __init__.py  llama_cpp_client.py
src/robot_voice_commander/robot_voice_commander/modules/speaker/: enroll.py  password_verifier.py  verifier.py  verify.py
src/robot_voice_msgs/: CMakeLists.txt  package.xml
src/robot_voice_msgs/msg/: PipelineStatus.msg  RobotAction.msg  RobotCommand.msg
